# raytracer_comp_grafica

./: .gitignore  CMakeLists.txt  Makefile  README.md  perspective_test.xml  test_interpolation.xml  test_single_color.xml
msg_system/: error.cpp  error.hpp
results/: interpolated_bkg  perspective_test  perspective_test_2
src/core/: App.cpp  App.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  common.hpp  film.cpp  film.hpp  geometry.hpp  image_io.cpp  image_io.hpp  integrator.cpp  integrator.hpp  main.cpp  material.hpp  paramset.hpp  parser.cpp  parser.hpp  primitive.cpp  primitive.hpp  scene.hpp  shape.hpp  sphere.cpp  sphere.hpp  surfel.hpp
src/integrators/: integrator.cpp  integrator.hpp  normal_map_integrator.cpp  normal_map_integrator.hpp  raycast_integrator.cpp  raycast_integrator.hpp
xml_files/: interpolation.xml  single_color.xml  test2_proj04_integrators.xml  test_perspective.xml  test_proj04_integrators.xml  test_spheres_ortho.xml  test_spheres_perspective.xml
